Avoid busy-waiting for process output. Convert all website filters to regex